# based-count-bot

./: .gitignore  README.md  keep_alive.py  main.py  pyproject.toml
cogs/: based.sqlite  config.json  core.py  counter.py  misc.py  stats.py
util/: checks.py
